cabal-version: 3.0
name:          numeric-domains
version:       0.1.0.0
synopsis:      Numeric Domains
description:   Please see the README on GitHub at <https://github.com/typedbyte/numeric-domains#readme>
category:      Math
homepage:      https://github.com/typedbyte/numeric-domains#readme
bug-reports:   https://github.com/typedbyte/numeric-domains/issues
author:        Michael Szvetits
maintainer:    typedbyte@qualified.name
copyright:     2024 Michael Szvetits
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/typedbyte/numeric-domains

library
  exposed-modules:
      Numeric.Bound
      Numeric.Distance
      Numeric.Domain
      Numeric.Interval
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
  default-language: GHC2021
